--- a/dotnet/WPF/Layouts/VisualStudioLikeLayout/DemoLayout/MainWindow.xaml
+++ b/dotnet/WPF/Layouts/VisualStudioLikeLayout/DemoLayout/MainWindow.xaml
@@ -6,7 +6,23 @@
         xmlns:local="clr-namespace:DemoLayout"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+    <DockPanel>
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="File">
+                <MenuItem Header="Exit"/>
+            </MenuItem>
+            <MenuItem Header="Edit"/>
+            <MenuItem Header="View"/>
+            <MenuItem Header="Git"/>
+            <MenuItem Header="Project"/>
+            <MenuItem Header="Build"/>
+            <MenuItem Header="Debug"/>
+            <MenuItem Header="Test"/>
+            <MenuItem Header="Tools"/>
+            <MenuItem Header="Extensions"/>
+            <MenuItem Header="Window"/>
+            <MenuItem Header="Help"/>
+        </Menu>
 
-    </Grid>
+    </DockPanel>
 </Window>
