--- a/dotnet/WPF/Layouts/VisualStudioLikeLayout/DemoLayout/UserControls/SolutionExplorerPanel.xaml
+++ b/dotnet/WPF/Layouts/VisualStudioLikeLayout/DemoLayout/UserControls/SolutionExplorerPanel.xaml
@@ -8,13 +8,15 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
         <Grid.RowDefinitions>
-            <RowDefinition Height="53"/>
+            <RowDefinition Height="40"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBlock Text="Solution Explorer" FontSize="20" VerticalAlignment="Center" Grid.Row="0"/>
-        <Button Margin="0,10,10,10" HorizontalAlignment="Right" Width="30">
-            <Image Source="../Images/pin.png"/>
-        </Button>
+        <Grid Grid.Row="0" Background="DarkGray">
+            <TextBlock Text="Solution Explorer" Foreground="WhiteSmoke" VerticalAlignment="Center"/>
+            <Button Margin="0,10,0,10" HorizontalAlignment="Right">
+                <Image Source="/Images/pin_off.png"/>
+            </Button>
+        </Grid>
         <TreeView Grid.Row="1">
             <TreeViewItem Header="MySolution">
                 <TreeViewItem Header="Project #1"/>
