- Adding second panel to project

--- a/dotnet/WPF/Layouts/VisualStudioLikeLayout/DemoLayout/MainWindow.xaml
+++ b/dotnet/WPF/Layouts/VisualStudioLikeLayout/DemoLayout/MainWindow.xaml
@@ -71,6 +71,7 @@
             <!--Layer 1-->
             <Grid>
                 <UserControls:SolutionExplorerPanel Width="200" HorizontalAlignment="Right"/>
+                <UserControls:ToolsPanel Width="200" HorizontalAlignment="Right"/>
             </Grid>
         </Grid>
     </DockPanel>
