- Blocking panels before moving out of window left side

--- a/dotnet/WPF/Layouts/VisualStudioLikeLayout/DemoLayout/MainWindow.xaml
+++ b/dotnet/WPF/Layouts/VisualStudioLikeLayout/DemoLayout/MainWindow.xaml
@@ -81,12 +81,12 @@
                     <ColumnDefinition Width="Auto" SharedSizeGroup="PanelSizeGroup"/>
                 </Grid.ColumnDefinitions>
                 <UserControls:SolutionExplorerPanel Grid.Column="1"/>
-                <GridSplitter Grid.Column="0" Width="5"/>
+                <GridSplitter Grid.Column="1" Width="5" HorizontalAlignment="Left"/>
             </Grid>
             <!--Layer 2 - not pinned panels-->
-            <Grid Name="grdShowUnpinned" HorizontalAlignment="Right">
+            <Grid Name="grdShowUnpinned">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
+                    <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
             </Grid>
