--- a/dotnet/WPF/Layouts/VisualStudioLikeLayout/DemoLayout/UserControls/SolutionExplorerPanel.xaml
+++ b/dotnet/WPF/Layouts/VisualStudioLikeLayout/DemoLayout/UserControls/SolutionExplorerPanel.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:DemoLayout.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="White">
+    <Grid Background="White" Margin="5 0 0 0">
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
             <RowDefinition/>
