--- a/dotnet/WPF/Layouts/VisualStudioLikeLayout/DemoLayout/UserControls/SolutionExplorerPanel.xaml
+++ b/dotnet/WPF/Layouts/VisualStudioLikeLayout/DemoLayout/UserControls/SolutionExplorerPanel.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="DemoLayout.UserControls.SolutionExplorerPanel"
+﻿<local:PinablePanelBase x:Class="DemoLayout.UserControls.SolutionExplorerPanel"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -25,4 +25,4 @@
             </TreeViewItem>
         </TreeView>
     </Grid>
-</UserControl>
+</local:PinablePanelBase>
