--- a/dotnet/WPF/Layouts/VisualStudioLikeLayout/DemoLayout/UserControls/ToolsPanel.xaml
+++ b/dotnet/WPF/Layouts/VisualStudioLikeLayout/DemoLayout/UserControls/ToolsPanel.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="DemoLayout.UserControls.ToolsPanel"
+﻿<local:PinablePanelBase x:Class="DemoLayout.UserControls.ToolsPanel"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -26,4 +26,4 @@
             <ListViewItem Content="ListBox"/>
         </ListBox>
     </Grid>
-</UserControl>
+</local:PinablePanelBase>
