--- a/dotnet/WPF/Misc/InputBindingsDemo/DemoApp/MainWindow.xaml
+++ b/dotnet/WPF/Misc/InputBindingsDemo/DemoApp/MainWindow.xaml
@@ -5,7 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DemoApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800"
+        Name="window">
+    <Window.InputBindings>
+        <KeyBinding Command="{Binding ElementName=window, Path=WolfSound}" Key="W"/>
+    </Window.InputBindings>
     <Grid>
         <Grid ShowGridLines="True">
             <Grid.ColumnDefinitions>
