--- a/dotnet/WPF/Misc/InputBindingsDemo/DemoApp/MainWindow.xaml
+++ b/dotnet/WPF/Misc/InputBindingsDemo/DemoApp/MainWindow.xaml
@@ -10,8 +10,22 @@
     <Window.InputBindings>
         <KeyBinding Command="{Binding ElementName=window, Path=WolfSound}" Key="W"/>
     </Window.InputBindings>
+    <Window.Resources>
+        <Style TargetType="Button">
+            <Setter Property="VerticalContentAlignment" Value="Bottom"/>
+            <Setter Property="Margin" Value="0 0 0 10"/>
+            <Setter Property="Padding" Value="10"/>
+            <Setter Property="Background" Value="White"/>
+            <Setter Property="Effect">
+                <Setter.Value>
+                    <DropShadowEffect/>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        
+    </Window.Resources>
     <Grid>
-        <Grid ShowGridLines="True">
+        <Grid ShowGridLines="False">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
@@ -22,14 +36,15 @@
                 <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <Button Content="Button" Grid.RowSpan="2" />
+            <Button Content="Wolf" Command="{Binding WolfSound, ElementName=window}" Grid.RowSpan="2"/>
+
             <Button Content="Button" Grid.Column="1" Grid.RowSpan="2"/>
             <Button Content="Button" Grid.Column="2" Grid.RowSpan="2"/>
             <Button Content="Button" Grid.Column="3" Grid.RowSpan="2"/>
         </Grid>
-        <Grid Visibility="Visible" ShowGridLines="True" >
+        <Grid Visibility="Visible" ShowGridLines="False" Margin="0 -10 0 0" >
             <Grid.RowDefinitions>
-                <RowDefinition/>
+                <RowDefinition Height="2*"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
@@ -41,7 +56,6 @@
                 <ColumnDefinition/>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
-
             </Grid.ColumnDefinitions>
             <Button Grid.Column="1" Grid.ColumnSpan="2" Background="Red" Margin="10 0 10 0"/>
             <Button Grid.Column="3" Grid.ColumnSpan="2" Background="Red" Margin="10 0 10 0"/>
