--- a/dotnet/WPF/Misc/DiagonalPanel/DiagonalPanelDemo/MainWindow.xaml
+++ b/dotnet/WPF/Misc/DiagonalPanel/DiagonalPanelDemo/MainWindow.xaml
@@ -7,6 +7,13 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <local:DiagonalPanel>
+            <Button Content="Fooooooo" Width="100"/>
+            <Button Content="Fooooooo" Width="100"/>
+            <Button Content="Fooooooo" Width="100"/>
+            <Button Content="Fooooooo" Width="100"/>
+            <Button Content="Fooooooo" Width="100"/>
+            <Button Content="Fooooooo" Width="100"/>
+        </local:DiagonalPanel>
     </Grid>
 </Window>
